<resources>
    <string name="app_name">Popular Movies Stage 2</string>
    <string name="movie_details">Movie Details</string>


    <string name="data_key_review">reviews</string>
    <string name="data_key_videos">videos</string>

    <!-- strings related to favorites -->

    <string name="add_to_favorites_label">Add to Favorites:</string>
    <string name="favorites">Your Favorites</string> // literal for changing title on favorites page
    <string name="added_to_favorites"> added to favorites</string>
    <string name="removed_from_favorites"> removed from favorites</string>

    <!--  error messages -->

    <string name="db_error">Could not retrieve result from database</string>
    <string name="API_ERROR">API did not respond.</string>
    <string name="no_movie_data">Movie data is not available.</string>

    <!-- Error messages for Alert Dialog -->
    <string name="api_error">You have not provided a valid API Key.
        Go to themoviedb.org to get one. This app will be terminated.</string>
    <string name="online_error">You are not currently online. Please check your cellular data or
        WiFi settings. This app will be terminated.</string>

    <!-- Titles for Alert Dialog -->
    <string name="api_error_title">API ERROR</string>
    <string name="online_error_title">ONLINE ERROR</string>

    <!-- labels for details page -->
    <string name="ratings_label">User Rating:</string>
    <string name="synopsis_label">Synopsis:</string>
    <string name="release_date_label">Release Date:</string>
    <string name="reviews_label">Reviews:</string>
    <string name="trailers_label">Trailers:</string>



    <!-- Content description-->
    <string name="poster_image_content_description">Movie poster image </string>-->

    <!-- Movie poster content description -->
    <string name="movie_poster_content_description_text">Movie Poster</string>


    <!-- Used for Sorting -->

    <string name="popular">popular</string>
    <string name="rating">top_rated</string>
    <string name="favorite">favorite</string>

</resources>

