<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/movie_details_sv"
        android:background="@color/colorPrimary">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/padding">


            <TextView
                android:id="@+id/tv_original_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="top|center"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="15sp"
                android:scaleType="center"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_28"
                android:textStyle="bold" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/ivPoster"
                    android:layout_width="200dp"
                    android:layout_height="350dp"
                    android:layout_gravity="top|left"
                    android:contentDescription="@string/poster_image_content_description"
                    android:scaleType="centerCrop" />

                <LinearLayout
                    android:id="@+id/movie_info"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="@dimen/layout_margin"
                    android:gravity="top"
                    android:orientation="vertical">


                    <TextView
                        android:id="@+id/release_date_label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="@dimen/layout_margin"
                        android:text="@string/release_date_label"
                        android:textColor="@color/goldenrod"
                        android:textSize="@dimen/text_size_22"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/tv_release_date"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/text_margin"
                        android:textColor="@color/white"
                        android:textSize="@dimen/text_size_18" />

                    <TextView
                        android:id="@+id/ratings_label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/text_margin"
                        android:text="@string/ratings_label"
                        android:textColor="@color/goldenrod"
                        android:textSize="@dimen/text_size_22"
                        android:textStyle="bold" />


                    <TextView
                        android:id="@+id/tv_user_rating"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/text_margin"
                        android:textColor="@color/white"
                        android:textSize="@dimen/text_size_18" />

                    <TextView
                        android:id="@+id/favorite_label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/text_margin"
                        android:text="@string/add_to_favorites_label"
                        android:textColor="@color/green"
                        android:textSize="@dimen/text_size_22"
                        android:textStyle="bold" />

                    <ImageButton
                        android:id="@+id/star"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@null"
                        tools:ignore="ContentDescription"
                        android:src="@android:drawable/btn_star" />
                </LinearLayout>

            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/text_margin"
                android:paddingTop="@dimen/padding"
                android:text="@string/synopsis_label"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_22"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_synopsis"
                style="@style/TextAppearance.Widget.AppCompat.Toolbar.Subtitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"/>




            <TextView
                android:id="@+id/trailer_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/trailers_label"
                android:layout_marginTop="@dimen/text_margin"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_22"
                android:textStyle="bold"/>


            <android.support.v7.widget.RecyclerView
                android:id="@+id/rv_trailers"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:clipToPadding="true"/>


            <TextView
                android:id="@+id/detail_review_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/reviews_label"
                android:layout_marginTop="@dimen/text_margin"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_22"
                android:textStyle="bold"/>

            <android.support.v7.widget.RecyclerView
                android:id="@+id/rv_reviews"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="start"
                android:clipToPadding="true"/>
        </LinearLayout>
    </ScrollView>
</layout>